--- a/src/app.scss
+++ b/src/app.scss
@@ -14,7 +14,7 @@ main{
     height: 100%;
     width: 100%;
 
-    background-image: url(./macos-wallpaper.jpg);
+    background-image: url("/macos-wallpaper.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
